jartto:fix overflow

--- a/mobile/css/base.less
+++ b/mobile/css/base.less
@@ -11,7 +11,9 @@
 @black07:rgba(0,0,0,0.7);
 @black06:rgba(0,0,0,0.6);
 
-
+* {
+  -webkit-overflow-scrolling: touch;
+}
 /*公共样式*/
 html {
     font-size: 62.5%;
@@ -201,7 +203,7 @@ p{
     top: 45%;
     left: 50%;
     // margin: -100px 0 0 -100px;
-    margin: -135px 0 0 -100px;
+    margin: -155px 0 0 -100px;
 }
 
 .ui_header {
